@@ -9,6 +9,6 @@ Depends: R (>= 3.1.0), grid, methods, Matrix, survival
 Imports: stats, graphics, splines, lattice, minqa, numDeriv, mitools (>= 2.4)
 Suggests: foreign, MASS, KernSmooth, hexbin,
         RSQLite, RODBC, quantreg, parallel,
-        CompQuadForm, DBI
+        CompQuadForm, DBI, AER
 URL: http://r-survey.r-forge.r-project.org/survey/
 
