@@ -11,6 +11,8 @@
        use t distributions for confidence intervals. Specify df=Inf to get a Normal.
        [For Klaus Ignacio Lehmann Melendez]
 
+       svyivreg() for 2-stage least-squares (requires the AER package) 
+
 3.36   Add withPV.survey.design for plausible-value analyses (needs mitools >=2.4)
 
 3.35-3 Warning from svrepdesign() if type="BRR" and scale= is specified, to catch defaulting
